--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -12,9 +12,9 @@ jobs:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: athul/waka-readme
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_PROFILE_VIEWS: "FALSE"
-          SHOW_LOC_CHART: "FALSE"
+          USERNAME: Kingson
+          SHOW_TITLE: false
