--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -1,25 +1,20 @@
-name: Waka Readme
+name: Update stats
 
 on:
-  push:
-    branches:
-      - master
-  workflow_dispatch:
-  schedule:
-    # Runs at 12am UTC
-    - cron: "0 0 * * *"
+    push:
+        branches:
+            - master
+    schedule:
+        - cron: '0 0 * * *'
 
 jobs:
-  update-readme:
-    name: WakaReadme DevMetrics
-    runs-on: ubuntu-latest
-    steps:
-      - uses: athul/waka-readme@master
-        with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_TITLE: true
-          BLOCKS: ->
-          TIME_RANGE: all_time
-          SHOW_TIME: true
-          SHOW_MASKED_TIME: true
-          LANG_COUNT: 10
+    update-readme:
+        name: Update Readme with Metrics
+        runs-on: ubuntu-latest
+        steps:
+            - uses: athul/waka-readme@master
+              with:
+                  WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+                  GH_TOKEN: ${{ secrets.GH_TOKEN}}
+                  USERNAME: Kingson
+                  SHOW_TITLE: false
