--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -16,4 +16,5 @@ jobs:
               with:
                   WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
                   GH_TOKEN: ${{ secrets.GH_TOKEN}}
+                  USERNAME: Kingson-Zhang
                   SHOW_TITLE: false
